# ichack2024-backend

./: .gitignore  README.md  getnotes.py  getsongs.py  pyproject.toml
src/: game_state.py  getnotes.py  getsongs.py  listen_game.py  main.py  notes_data.txt  receive_audio.py  receive_text.py  recieve_audio.py  schemas.py  sing_game.py  utils.py
