[tool.poetry]
name = "ichack2024-backend"
version = "0.1.0"
description = "A sick project for the hackathon :D"
authors = ["Thomas Andrews <andrewstda@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.1"
uvicorn = "^0.27.0.post1"
pydub = "^0.25.1"
bs4 = "^0.0.2"
numpy = "^1.26.3"
scipy = "^1.12.0"
websockets = "^12.0"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
